--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.2",
     "history": "^5.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.21",
