--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.3",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
